# hse-algo-2223

./: README.md
ihw1/: CMakeLists.txt  README.md  aggregate_data.csv  graphs.py  main.cpp
ihw1/data/: binaryInsertSort_almost0-4000_bigSizes.csv  binaryInsertSort_almost0-4000_smallSizes.csv  binaryInsertSort_almost0_4000_bigSizes.csv  binaryInsertSort_almost0_4000_smallSizes.csv  binaryInsertSort_random0-4000_bigSizes.csv  binaryInsertSort_random0-4000_smallSizes.csv  binaryInsertSort_random0-5_bigSizes.csv  binaryInsertSort_random0-5_smallSizes.csv  binaryInsertSort_random0_4000_bigSizes.csv  binaryInsertSort_random0_4000_smallSizes.csv  binaryInsertSort_random0_5_bigSizes.csv  binaryInsertSort_random0_5_smallSizes.csv  binaryInsertSort_reverse4100-1_bigSizes.csv  binaryInsertSort_reverse4100-1_smallSizes.csv  binaryInsertSort_reverse4100_1_bigSizes.csv  binaryInsertSort_reverse4100_1_smallSizes.csv  bubbleSortAB_almost0-4000_bigSizes.csv  bubbleSortAB_almost0-4000_smallSizes.csv  bubbleSortAB_almost0_4000_bigSizes.csv  bubbleSortAB_almost0_4000_smallSizes.csv  bubbleSortAB_random0-4000_bigSizes.csv  bubbleSortAB_random0-4000_smallSizes.csv  bubbleSortAB_random0-5_bigSizes.csv  bubbleSortAB_random0-5_smallSizes.csv  bubbleSortAB_random0_4000_bigSizes.csv  bubbleSortAB_random0_4000_smallSizes.csv  bubbleSortAB_random0_5_bigSizes.csv  bubbleSortAB_random0_5_smallSizes.csv  bubbleSortAB_reverse4100-1_bigSizes.csv  bubbleSortAB_reverse4100-1_smallSizes.csv  bubbleSortAB_reverse4100_1_bigSizes.csv  bubbleSortAB_reverse4100_1_smallSizes.csv  bubbleSortA_random0-5_bigSizes.csv  (+175 more)
(+28 files in other folders)
